[gd_scene load_steps=9 format=3 uid="uid://c4kmhd08xyyp8"]

[ext_resource type="Script" uid="uid://cp6ala5qvong6" path="res://scripts/question_1_scene.gd" id="1_ktmkp"]
[ext_resource type="Texture2D" uid="uid://meucgqtacj0j" path="res://art assets/Dummy game scene.jpg" id="2_nskfs"]
[ext_resource type="Texture2D" uid="uid://cjsm3a5okxuoy" path="res://art assets/textbox sample4.png" id="3_gk52v"]
[ext_resource type="FontFile" uid="uid://d304qwinvdngc" path="res://art assets/determination.ttf" id="4_15k0e"]
[ext_resource type="PackedScene" uid="uid://dv7dtkk2kf7sa" path="res://scenes/fade_transition.tscn" id="5_k3db3"]

[sub_resource type="Animation" id="Animation_rurhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_y3j0m"]
resource_name = "typing_text"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question1:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kk2rg"]
_data = {
&"RESET": SubResource("Animation_rurhu"),
&"typing_text": SubResource("Animation_y3j0m")
}

[node name="Question 1 Scene" type="Node2D"]
script = ExtResource("1_ktmkp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(507.5, 359.00003)
scale = Vector2(0.70387095, 0.74768287)
texture = ExtResource("2_nskfs")

[node name="TextBox" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(514.50006, 360)
scale = Vector2(4.1319995, 4.7999997)
texture = ExtResource("3_gk52v")

[node name="question1" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 148.0
offset_top = 563.0
offset_right = 650.6667
offset_bottom = 604.3333
scale = Vector2(1.5, 1.5)
theme_override_fonts/normal_font = ExtResource("4_15k0e")
text = "Welcome back Yaski, how are you feeling from...recents events?"
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="question1Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kk2rg")
}

[node name="transition" parent="." instance=ExtResource("5_k3db3")]
offset_left = -19.0
offset_top = -17.0
offset_right = 1040.0
offset_bottom = 737.0

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Acceptance" type="Button" parent="ButtonManager"]
visible = false
layout_mode = 0
offset_left = 331.0
offset_top = 634.0
offset_right = 472.0
offset_bottom = 691.0
theme_override_fonts/font = ExtResource("4_15k0e")
text = "I feel bad."

[node name="Denial" type="Button" parent="ButtonManager"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 504.0
offset_top = 634.0
offset_right = 645.0
offset_bottom = 691.0
theme_override_fonts/font = ExtResource("4_15k0e")
text = "..."

[node name="SceneIdentifier" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 367.0
offset_top = 270.0
offset_right = 511.0
offset_bottom = 300.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("4_15k0e")
text = "Question 1 Scene"

[connection signal="pressed" from="ButtonManager/Acceptance" to="." method="_on_acceptance_pressed"]
[connection signal="pressed" from="ButtonManager/Denial" to="." method="_on_denial_pressed"]
